Adaptação do codigo

--- a/templates/Cadastre-se.html
+++ b/templates/Cadastre-se.html
@@ -36,8 +36,9 @@
         <form method="POST" action="/submit_cliente">
             <input type="text" required name="nome_cliente" placeholder="Nome"><br>
             <input type="text" required name="cpf_cliente" placeholder="CPF"><br>
-            <input type="text" required name="email_cliente" placeholder="Email"><br>
             <input type="text" required name="telefone_cliente" placeholder="Telefone"><br>
+            <input type="text" required name="email_cliente" placeholder="Email"><br>
+            <input type="text" required name="cidade_cliente" placeholder="Cidade"><br>
             <button type="submit">Enviar</button>
         </form>
         <style>
