--- a/templates/Pages_admin/Alterar_cadastro_cliente_admin.html
+++ b/templates/Pages_admin/Alterar_cadastro_cliente_admin.html
@@ -37,6 +37,7 @@
             <input type="text" required name="cpf_atlzd" placeholder="CPF atualizado"><br>
             <input type="text" required name="email_atlzd" placeholder="Email atualizado"><br>
             <input type="text" required name="telefone_atlzd" placeholder="Telefone atualizado"><br>
+            <input type="text" required name="cidade_atlz" placeholder="Cidade atualizada"><br>
             <button type="submit">Enviar</button>
         </form>
         <style>
