--- a/templates/Pages_admin/Alterar_cadastro_livro_admin.html
+++ b/templates/Pages_admin/Alterar_cadastro_livro_admin.html
@@ -35,7 +35,16 @@
             <input type="text" required name="id" placeholder="ID do livro que deseja fazer alteração"><br>
             <input type="text" required name="nome_atlzd" placeholder="Nome do livro atualizado"><br>
             <input type="text" required name="preco_atlzd" placeholder="Preço atualizado"><br>
+            <input type="text" required name="local_fabric_atlz" placeholder="Local de fabricação atualizado"><br>
             <input type="text" required name="quantidade_atlzd" placeholder="Quantidade atualizado"><br>
+            <fieldset>
+                <legend>Seleciona a categoria do livro atualizado</legend>
+                <select name="categoria_livro_atlz">
+                    <option value="1">Fantasia</option>
+                    <option value="2">Ficção científica</option>
+                    <option value="3">Educação</option>
+                </select>
+            </fieldset>
             <button type="submit">Enviar</button>
         </form>
         <style>
