--- a/templates/Pages_admin/Cadastrar_livro.html
+++ b/templates/Pages_admin/Cadastrar_livro.html
@@ -35,7 +35,7 @@
     <div class="container">
         <form method="POST" action="/submit_livro">
             <input type="text" required name="nome_livro" placeholder="Nome do Livro"><br>
-            <input type="text" required name="preco_livro" placeholder="Preço"><br>
+            <input type="number" step="0.01" required name="preco_livro" placeholder="Preço"><br>
             <input type="text" required name="local_fabric" placeholder="Local de fabricação"><br>
             <input type="text" required name="quantidade_livro" placeholder="Quantidade"><br>
             <fieldset>
