--- a/templates/Pages_admin/Pesquisar_livro.html
+++ b/templates/Pages_admin/Pesquisar_livro.html
@@ -37,7 +37,7 @@
             <legend>Pesquisar por nome</legend>
             <input type="text" name="nome_livro" placeholder="Nome do livro"><br>
             <legend>Pesquisar pelo preço</legend>
-            <input type="text" name="preco_livro" placeholder="Preço do livro"><br>
+            <input type="number" step="0.01" name="preco_livro" placeholder="Preço do livro"><br>
             <legend>Pesquisar pelo local de fabricação</legend>
             <input type="text" name="local_fabric" placeholder="Local de fabricação"><br>
             <fieldset>
