Criação da pagina e cadastro do vendedor

--- a/templates/homepage_cliente.html
+++ b/templates/homepage_cliente.html
@@ -13,7 +13,7 @@
     }
     </style>
     <div>
-        <p class="titulo">Livraria</p>
+        <p class="titulo">Livraria Pagina cliente</p>
         <style>
             p{
                 color: white;
