--- a/templates/homepage_vendedor.html
+++ b/templates/homepage_vendedor.html
@@ -14,7 +14,7 @@
     </style>
     <div>
         <p class="titulo">Livraria</p>
-        <p class="titulo">Painel do administrador</p>
+        <p class="titulo">Painel do Vendedor</p>
         <style>
             p{
                 color: white;
@@ -31,19 +31,13 @@
     </div>
 
     <div class="opções">
-        <a href="Cadastrar_vendedor_admin.html">Cadastrar vendedor</a>
-        <a href="Cadastrar_cliente_admin.html">Cadastrar cliente</a>
-        <a href="Alterar_cadastro_cliente_admin.html">Alterar cadastro do cliente</a>
-        <a href="Pesquisar_cliente_admin.html">Pesquisar cliente</a>
-        <a href="Remover_cliente_admin.html">Remover Cliente</a>
-        <a href="listar_all_clientes_admin.html">Listar todos os clientes cadastrados</a>
+        <a href="Cadastrar_cliente_vendedor.html">Cadastrar cliente</a>
+        <a href="Pesquisar_cliente_vendedor.html">Pesquisar cliente</a>
+        <a href="listar_all_clientes_vendedor.html">Listar todos os clientes cadastrados</a>
         
-        <a href="Cadastrar_livro_admin.html">Cadastrar Livro</a>
-        <a href="Alterar_cadastro_livro_admin.html">Alterar cadastro do livro</a>
-        <a href="Pesquisar_livro_admin.html">Pesquisar livro</a>
-        <a href="Remover_livro_admin.html">Remover livro</a>
-        <a href="listar_all_livros_admin.html">Listar todos os livros cadastrados</a>
-        <a href="Gerar_relatorio_admin.html">Gerar Relatório</a>
+        <a href="Pesquisar_livro_vendedor.html">Pesquisar livro</a>
+        <a href="listar_all_livros_vendedor.html">Listar todos os livros cadastrados</a>
+        <a href="/">Gerar Relatório de Vendedores</a>
 
         <style>
             .opções{
