--- a/templates/Pages_admin/Cadastrar_vendedor_admin.html
+++ b/templates/Pages_admin/Cadastrar_vendedor_admin.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu site Teste</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Cadastrar cliente</title>
 </head>
+
 <body>
     <style> body{
         margin: 0px;
@@ -13,8 +16,7 @@
     }
     </style>
     <div>
-        <p class="titulo">Livraria</p>
-        <p class="titulo">Painel do administrador</p>
+        <p class="titulo">Cadastro de vendedores</p>
         <style>
             p{
                 color: white;
@@ -30,28 +32,30 @@
         </style>
     </div>
 
-    <div class="opções">
-        <a href="Cadastrar_vendedor_admin.html">Cadastrar vendedor</a>
-        <a href="Cadastrar_cliente_admin.html">Cadastrar cliente</a>
-        <a href="Alterar_cadastro_cliente_admin.html">Alterar cadastro do cliente</a>
-        <a href="Pesquisar_cliente_admin.html">Pesquisar cliente</a>
-        <a href="Remover_cliente_admin.html">Remover Cliente</a>
-        <a href="listar_all_clientes_admin.html">Listar todos os clientes cadastrados</a>
-        
-        <a href="Cadastrar_livro_admin.html">Cadastrar Livro</a>
-        <a href="Alterar_cadastro_livro_admin.html">Alterar cadastro do livro</a>
-        <a href="Pesquisar_livro_admin.html">Pesquisar livro</a>
-        <a href="Remover_livro_admin.html">Remover livro</a>
-        <a href="listar_all_livros_admin.html">Listar todos os livros cadastrados</a>
-        <a href="Gerar_relatorio_admin.html">Gerar Relatório</a>
-
+    <div class="container">
+        <form method="POST" action="/cadastro_vendedor">
+            <input type="text" required name="nome_vendedor" placeholder="Nome"><br>
+            <input type="text" required name="cpf_vendedor" placeholder="CPF"><br>
+            <input type="text" required name="telefone_vendedor" placeholder="Telefone"><br>
+            <input type="email" required name="email_vendedor" placeholder="Email"><br>
+            <button type="submit">Enviar</button>
+        </form>
         <style>
-            .opções{
-                margin: 2rem;
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr;
+            .container{
+                text-align: center;
+                font-size: 2rem;
             }
+        </style>
+    </div>
 
+
+    <div class="funcoes">
+        <a href="homepage_admin.html">Voltar</a>
+        <style>
+            .funcoes{
+                margin: 5rem;
+                text-align: center;
+            }
             a{
                 color: white;
                 background-color: #ef8e7d;
