--- a/templates/Pages_vendedor/Pesquisar_livro_vendedor.html
+++ b/templates/Pages_vendedor/Pesquisar_livro_vendedor.html
@@ -41,7 +41,7 @@
             <legend>Pesquisar por uma faixa de preço</legend>
             <input type="number" step="0.01" name="preco_min" placeholder="Preço mínimo"><input type="number" step="0.01" name="preco_max" placeholder="Preço máximo"><br><br>
             <legend>Pesquisar pelo local de fabricação</legend>
-            <input type="text" name="local_fabric" placeholder="Local de fabricação"><br>
+            <input type="text" name="local_fabric" placeholder="Local de fabricação"><br><br>
             <fieldset>
                 <legend>Pesquisar pela categoria</legend>
                 <select name="categoria_livro">
