--- a/templates/homepage_cliente.html
+++ b/templates/homepage_cliente.html
@@ -30,12 +30,7 @@
     </div>
 
     <div class="opções">
-        <a href="Cadastrar_cliente.html">Cadastrar cliente</a>
-        <a href="Alterar_cadastro_cliente.html">Alterar cadastro do cliente</a>
-        <a href="Pesquisar_cliente.html">Pesquisar cliente</a>
-        <a href="Remover_cliente.html">Remover Cliente</a>
-        
-        <a href="listar_all_clientes.html">Listar todos os clientes cadastrados</a>
+        <a href="/">Sair</a>
         
 
         <style>
