--- a/templates/homepage_vendedor.html
+++ b/templates/homepage_vendedor.html
@@ -37,7 +37,8 @@
         
         <a href="Pesquisar_livro_vendedor.html">Pesquisar livro</a>
         <a href="listar_all_livros_vendedor.html">Listar todos os livros cadastrados</a>
-        <a href="/">Gerar Relatório de Vendedores</a>
+        <a href="/">Gerar Relatório de Vendedores</a><br>
+        <a href="/">Sair</a>
 
         <style>
             .opções{
