--- a/templates/homepage_admin.html
+++ b/templates/homepage_admin.html
@@ -43,7 +43,8 @@
         <a href="Pesquisar_livro_admin.html">Pesquisar livro</a>
         <a href="Remover_livro_admin.html">Remover livro</a>
         <a href="listar_all_livros_admin.html">Listar todos os livros cadastrados</a>
-        <a href="Gerar_relatorio_admin.html">Gerar Relatório</a>
+        <a href="Gerar_relatorio_admin.html">Gerar Relatório</a><br>
+        <a href="/">Sair</a>
 
         <style>
             .opções{
