--- a/templates/homepage_cliente.html
+++ b/templates/homepage_cliente.html
@@ -13,7 +13,7 @@
     }
     </style>
     <div>
-        <p class="titulo">Livraria Pagina cliente</p>
+        <p class="titulo">Livraria Pagina Cliente</p>
         <style>
             p{
                 color: white;
@@ -31,6 +31,8 @@
 
     <div class="opções">
         <a href="Alterar_dados_cliente.html">Alterar dados pessoais</a>
+        <a href="Historico_De_Compras.html">Histórico de Compras</a>
+        <a href="Realizar_Compra.html">Realizar Compra</a>
         <a href="/">Sair</a>
         
 
